force-app/main/default/objects/Product_Engagement_Request__c/Product_Engagement_Request__c.object-meta.xml
<CustomObject>
    <label>Product Engagement Request</label>
    <nameField>
        <displayFormat>PER-{0000}</displayFormat>
        <label>Product Engagement Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Engagement Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>