force-app/main/default/objects/Product_Engagement_Request__c/fields/Business_Customer_Value__c.field-meta.xml
<CustomField>
    <fullName>Business_Customer_Value__c</fullName>
    <label>Customer Value</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>