force-app/main/default/objects/Product_Engagement_Request__c/fields/Count_of_JIRA_Requests__c.field-meta.xml
<CustomField>
    <fullName>Count_of_JIRA_Requests__c</fullName>
    <label>Count of JIRA Requests</label>
    <summaryForeignKey>ProductJIRARequests__c.ProductEngagementRequest__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>