force-app/main/default/objects/Product_Engagement_Request__c/fields/CurrentlyonRoadmap__c.field-meta.xml
<CustomField>
    <fullName>CurrentlyonRoadmap__c</fullName>
    <label>Currently on Roadmap?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>