force-app/main/default/objects/Product_Engagement_Request__c/fields/Customer_Approved__c.field-meta.xml
<CustomField>
    <fullName>Customer_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used after the PM approves initial request. Once approved, the SE will seek customer approval and use this field.</description>
    <inlineHelpText>Select this checkbox only AFTER your submission is approved AND your customer agrees to the timeline.</inlineHelpText>
    <label>Customer Approved</label>
    <type>Checkbox</type>
</CustomField>