force-app/main/default/objects/Product_Engagement_Request__c/fields/Customer_Engagement_Request__c.field-meta.xml
<CustomField>
    <fullName>Customer_Engagement_Request__c</fullName>
    <label>Customer Engagement Request</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Specific Request</fullName>
            </value>
            <value>
                <fullName>Feature Acceleration Request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>