force-app/main/default/objects/Product_Engagement_Request__c/fields/Key_Internal_or_External_Drivers__c.field-meta.xml
<CustomField>
    <fullName>Key_Internal_or_External_Drivers__c</fullName>
    <label>Key Internal or External Drivers</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>