force-app/main/default/objects/Product_Engagement_Request__c/fields/PGi_Product__c.field-meta.xml
<CustomField>
    <fullName>PGi_Product__c</fullName>
    <label>PGi Product</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Audio</fullName>
            </value>
            <value>
                <fullName>BackOffice / MiddleTier</fullName>
            </value>
            <value>
                <fullName>Billing / Reporting</fullName>
            </value>
            <value>
                <fullName>Central Desktop</fullName>
            </value>
            <value>
                <fullName>Convergence</fullName>
            </value>
            <value>
                <fullName>Event Conferencing</fullName>
            </value>
            <value>
                <fullName>GlobalMeet Desktop</fullName>
            </value>
            <value>
                <fullName>GlobalMeet Mobile</fullName>
            </value>
            <value>
                <fullName>GlobalMeet Tools</fullName>
            </value>
            <value>
                <fullName>GlobalMeet Web (5.x)</fullName>
            </value>
            <value>
                <fullName>GlobalMeet Webcast</fullName>
            </value>
            <value>
                <fullName>GlobalMeet Webinar</fullName>
            </value>
            <value>
                <fullName>Identity</fullName>
            </value>
            <value>
                <fullName>MS / Cisco / Adobe</fullName>
            </value>
            <value>
                <fullName>OnNet</fullName>
            </value>
            <value>
                <fullName>Op Assist</fullName>
            </value>
            <value>
                <fullName>Portal/Hub/Provisioning</fullName>
            </value>
            <value>
                <fullName>Production Applications</fullName>
            </value>
            <value>
                <fullName>ReadyTalk</fullName>
            </value>
            <value>
                <fullName>Systems Architecture</fullName>
            </value>
            <value>
                <fullName>UCaaS</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>