force-app/main/default/objects/Product_Engagement_Request__c/fields/Please_describe_in_detail_the__c.field-meta.xml
<CustomField>
    <fullName>Please_describe_in_detail_the__c</fullName>
    <inlineHelpText>Please describe in detail the description of the feature request.</inlineHelpText>
    <label>Description of Feature Request</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>