force-app/main/default/objects/Product_Engagement_Request__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <formula>TEXT($User.User_Region__c)</formula>
    <label>Region</label>
    <type>Text</type>
</CustomField>