force-app/main/default/objects/Product_Engagement_Request__c/fields/Related_Account__c.field-meta.xml
<CustomField>
    <fullName>Related_Account__c</fullName>
    <label>Related Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Product Engagement Requests</relationshipLabel>
    <relationshipName>Product_Engagement_Requests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>