force-app/main/default/objects/Product_Engagement_Request__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Pending PM Approval</fullName>
            </value>
            <value>
                <fullName>PM Rejected</fullName>
            </value>
            <value>
                <fullName>Pending Exec. Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Closed Completed</fullName>
            </value>
            <value>
                <fullName>Closed Rejected</fullName>
            </value>
            <value>
                <fullName>Pending Approval</fullName>
                <isActive>false</isActive>
                <label>Pending Approval</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>