force-app/main/default/objects/Product_Engagement_Request__c/fields/TotalCostEstimateofWork__c.field-meta.xml
<CustomField>
    <fullName>TotalCostEstimateofWork__c</fullName>
    <label>Total Cost to Expediate / Add to Roadmap</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>