force-app/main/default/objects/Product_Engagement_Request__c/fields/Year_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Year_Completion_Date__c</fullName>
    <label>Year Completion Date</label>
    <length>4</length>
    <type>Text</type>
</CustomField>