force-app/main/default/objects/Product_Engagement_Request__c/listViews/All_Pending_Approval.listView-meta.xml
<ListView>
    <fullName>All_Pending_Approval</fullName>
    <columns>NAME</columns>
    <columns>PGi_Product__c</columns>
    <columns>Status__c</columns>
    <columns>Related_Account__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Pending PM Approval,Pending Exec. Approval</value>
    </filters>
    <label>All Pending Approval</label>
    <language>en_US</language>
</ListView>