force-app/main/default/objects/Product_Engagement_Request__c/listViews/Customer_Not_Approved_Open_Requests.listView-meta.xml
<ListView>
    <fullName>Customer_Not_Approved_Open_Requests</fullName>
    <columns>NAME</columns>
    <columns>PGi_Product__c</columns>
    <columns>Status__c</columns>
    <columns>Related_Account__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Customer_Approved__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Approved,Closed Completed,Closed Rejected</value>
    </filters>
    <label>Customer Not Approved, Open Requests</label>
    <language>en_US</language>
</ListView>