force-app/main/default/objects/Product_Engagement_Request__c/listViews/Status_Closed_Completed.listView-meta.xml
<ListView>
    <fullName>Status_Closed_Completed</fullName>
    <columns>NAME</columns>
    <columns>PGi_Product__c</columns>
    <columns>Status__c</columns>
    <columns>Related_Account__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Closed Completed</value>
    </filters>
    <label>Status:  Closed Completed</label>
    <language>en_US</language>
</ListView>